Documentação para API criada (documentation.md) // README parcialmente finalizado // Classes documentadas.
